@@ -1,18 +1,21 @@
 package com.motionmate.service.goods;
 
 import com.motionmate.domain.goods.Goods;
-import com.motionmate.domain.goods.GoodsRepository;
 import com.motionmate.domain.goods.Order;
+import com.motionmate.domain.goods.OrderItem;
 import com.motionmate.domain.goods.OrderRepository;
 import com.motionmate.domain.user.User;
+import com.motionmate.dto.goods.order.OrderRequestDto;
 import com.motionmate.dto.goods.order.OrderResponseDto;
-import com.motionmate.mapper.goods.OrderMapper; // 🔥 OrderMapper import 추가
+import com.motionmate.dto.goods.order.OrderItemRequestDto;
+import com.motionmate.mapper.goods.OrderMapper;
+import com.motionmate.domain.goods.GoodsRepository;
+
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,30 +23,44 @@ public class OrderService {
 
     private final OrderRepository orderRepository;
     private final GoodsRepository goodsRepository;
+    private final OrderMapper orderMapper;
 
-    // ✅ 주문 생성
+    /**
+     * 주문 생성
+     */
     @Transactional
-    public Long placeOrder(User user, Long goodsId, int quantity) {
-        Goods goods = goodsRepository.findById(goodsId)
-                .orElseThrow(() -> new IllegalArgumentException("상품을 찾을 수 없습니다."));
-        if (goods.getStock() < quantity) {
-            throw new IllegalArgumentException("재고가 부족합니다.");
-        }
+    public OrderResponseDto createOrder(OrderRequestDto requestDto, User user) {
+        // 1. 상품 ID 목록 추출
+        List<Long> goodsIds = requestDto.getItems().stream()
+                .map(OrderItemRequestDto::getGoodsId)
+                .toList();
 
-        // 재고 차감
-        goods.decreaseStock(quantity);
+        // 2. 상품 목록 조회
+        List<Goods> goodsList = goodsRepository.findAllById(goodsIds);
 
-        Order order = new Order(user, goods, quantity);
+        // 3. Order 객체 생성
+        Order order = orderMapper.toOrderEntity(user);
+
+        // 4. OrderItem 리스트 생성
+        List<OrderItem> orderItems = orderMapper.toOrderItemEntityList(requestDto.getItems(), goodsList);
+
+        // 5. 연관관계 설정
+        order.applyOrderItems(orderItems);
+
+        // 6. 저장
         orderRepository.save(order);
 
-        return order.getId();
+        // 7. 응답 DTO 변환
+        return orderMapper.toResponseDto(order);
     }
 
-    // ✅ 주문 내역 조회
+    /**
+     * 사용자의 모든 주문 목록 조회
+     */
     @Transactional(readOnly = true)
     public List<OrderResponseDto> getOrders(User user) {
         return orderRepository.findByUser(user).stream()
-                .map(OrderMapper::toDto) // 🔥 매핑 로직 위임
-                .collect(Collectors.toList());
+                .map(orderMapper::toResponseDto)
+                .toList();
     }
 }
